add dialog to name unknown product
